--- a/a-jetty-swing/src/main/resources/MessagesAjetty.properties
+++ b/a-jetty-swing/src/main/resources/MessagesAjetty.properties
@@ -5,3 +5,12 @@ stopped = Stopped
 wait = Please wait...
 port = Port:
 refresh = Refresh
+httpsPw = Private key password (if any):
+passwordDoNotMatch = Wrong keystore password!
+SkpasswordDoNotMatch = Wrong private key password!
+EnterAjettyNumber = Please enter A-Jetty instance number!
+AJettyIn = A-Jetty instance number:
+KeystorePw = Keystore password:
+KeystorePwc = Repeat keystore password:
+error = Error!
+PasswordRepeatNoMatch = Repeated password not match!
