fixed for android, passwords rules...

--- a/a-jetty-swing/src/main/resources/MessagesAjetty.properties
+++ b/a-jetty-swing/src/main/resources/MessagesAjetty.properties
@@ -7,10 +7,9 @@ port = Port:
 refresh = Refresh
 httpsPw = Private key password (if any):
 passwordDoNotMatch = Wrong keystore password!
-SkpasswordDoNotMatch = Wrong private key password!
 EnterAjettyNumber = Please enter A-Jetty instance number!
 AJettyIn = A-Jetty instance number:
 KeystorePw = Keystore password:
-KeystorePwc = Repeat keystore password:
+KeystorePwc = Confirm keystore password:
 error = Error!
-PasswordRepeatNoMatch = Repeated password not match!
+PasswordRepeatNoMatch = The passwords do not match!
