--- a/a-jetty-base/src/main/resources/MessagesCrypto.properties
+++ b/a-jetty-base/src/main/resources/MessagesCrypto.properties
@@ -1,1 +1,1 @@
-WrongPassword = Please enter a strong password! At least 15 letters and digits! 80% of them must be different! 3-5 of them must be digits!
+WrongPassword = Please enter a strong password! At least 15 letters and digits! 60% of them must be different! At least 50% of them must be letters! At least 3 of them must be digits! No containing qwerty, 12345, admin, user etc!
