starter logger added, fixed apk sign/align

--- a/a-jetty-base/src/main/resources/MessagesCrypto.properties
+++ b/a-jetty-base/src/main/resources/MessagesCrypto.properties
@@ -1,1 +1,8 @@
 WrongPassword = Please enter a strong password! At least 15 letters and digits! 60% of them must be different! At least 50% of them must be letters! At least 3 of them must be digits! No containing qwerty, 12345, admin, user etc!
+Password15 = At least 15 letters and digits!
+noQwerty = No QWERTY!
+noAdmin12345 = No admin, user, password, 12345, 54321 etc!
+letterOrDig = Only letters or digits!
+lettersAtLeast50pr = At least 50% must be letters!
+distinct60pr = 60% must be different!
+atLeast3digits = At least 3 digits!
