added jar signing, fixed crossplatform file separator, fixed webcontext path for several jetty instances...

--- a/a-jetty-base/src/main/resources/MessagesCrypto.properties
+++ b/a-jetty-base/src/main/resources/MessagesCrypto.properties
@@ -6,3 +6,4 @@ letterOrDig = Only letters or digits!
 lettersAtLeast50pr = At least 50% must be letters!
 distinct60pr = 60% must be different!
 atLeast3digits = At least 3 digits!
+noDemoPassw = No Demo Password!
