added command line starter

--- a/a-jetty-swing/src/main/resources/MessagesAjetty.properties
+++ b/a-jetty-swing/src/main/resources/MessagesAjetty.properties
@@ -1,6 +1,7 @@
 title = A-Jetty
 start = Start
 stop = Stop
+started = Started
 stopped = Stopped
 wait = Please wait...
 port = Port:
@@ -13,3 +14,8 @@ KeystorePw = Keystore password:
 KeystorePwc = Confirm keystore password:
 error = Error!
 PasswordRepeatNoMatch = The passwords do not match!
+enter_ajetty_start = Please enter g to start A-Jetty (or q to quit):
+enter_ajetty_stop = Please enter s to stop A-Jetty (or q to quit):
+enter_ajetty_sn = Please enter A-Jetty number (or q to quit):
+enter_ajetty_passwd = Please enter A-Jetty password (or q to quit):
+enter_ajetty_passwd_conf = Please confirm A-Jetty password (or q to quit):
