added enter port in CLI, BouncyCastle 1.59

--- a/a-jetty-swing/src/main/resources/MessagesAjetty.properties
+++ b/a-jetty-swing/src/main/resources/MessagesAjetty.properties
@@ -17,5 +17,7 @@ PasswordRepeatNoMatch = The passwords do not match!
 enter_ajetty_start = Please enter g to start A-Jetty (or q to quit):
 enter_ajetty_stop = Please enter s to stop A-Jetty (or q to quit):
 enter_ajetty_sn = Please enter A-Jetty number (or q to quit):
+enter_ajetty_port = Please enter A-Jetty port or press enter to use default 8443:
+ajetty_port_def = it will be used default port 8443
 enter_ajetty_passwd = Please enter A-Jetty password (or q to quit):
 enter_ajetty_passwd_conf = Please confirm A-Jetty password (or q to quit):
